# tailwindcss

./: .babelrc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitpod.yml  .huskyrc  .jshintrc  .npmignore  .prettierignore  .prettierrc  .swcrc  .tool-versions  .travis.yml  AGENTS.md  AI_BOUNTY_SOLUTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Diff  LICENSE  LLM.md  Patch  README-zh.md  README.md  README.zh-CN.md  _redirects  base.css  bootstrap.php  build.js  colors.d.ts  colors.js  commitlint.config.js  composer.json  config.php  config.production.php  config.staging.php  (+57 more)
.cargo/: config.toml
.circleci/: config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRMQuejas  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  QUICKSTARTGUIDE.md  dependabot.yml
__tests__/: cli.test.js  (+47 more)
crates/core/: Cargo.toml
crates/core/benches/: parse_candidates.rs
crates/core/fuzz/: Cargo.toml
crates/core/src/: compiler.rs  glob.rs  lib.rs  main.rs
crates/core/src/compat/: config.rs  mod.rs  plugin.rs
crates/core/src/css/: ast.rs  mod.rs  optimize.rs  parser.rs  serializer.rs  syntax.rs  visit.rs
crates/core/src/engine/: candidate.rs  mod.rs
crates/core/src/util/: decode.rs  escape.rs  fast_stack.rs  gurantee.rs  math.rs  mod.rs  segment.rs  throughput.rs
crates/ignore/: Cargo.toml  README.md
crates/ignore/examples/: walk.rs
crates/ignore/src/: default_types.rs  dir.rs  gitignore.rs  lib.rs  overrides.rs  pathutil.rs  types.rs  walk.rs
crates/ignore/tests/: gitignore_matched_path_or_any_parents_tests.gitignore  gitignore_matched_path_or_any_parents_tests.rs  gitignore_skip_bom.gitignore  gitignore_skip_bom.rs
crates/node/: .gitignore  .npmignore  Cargo.toml  export_native_binding.js  package.json
crates/node/.cargo/: config.toml
crates/node/npm/android-arm-eabi/: README.md  package.json
crates/node/npm/android-arm64/: README.md  package.json
crates/node/npm/darwin-arm64/: package.json
crates/node/npm/darwin-x64/: README.md  package.json
crates/node/npm/freebsd-x64/: README.md  package.json
crates/node/npm/linux-arm-gnueabihf/: README.md  package.json
crates/node/npm/linux-arm64-gnu/: package.json
crates/node/npm/linux-arm64-musl/: README.md  package.json
crates/node/npm/linux-loong64-gnu/: README.md  package.json
crates/node/npm/linux-loong64-musl/: README.md  package.json
crates/node/npm/linux-riscv64-gnu/: README.md  package.json
crates/node/npm/linux-x64-gnu/: README.md  package.json
crates/node/npm/linux-x64-musl/: README.md  package.json
crates/node/npm/openharmony-arm64/: package.json
crates/node/npm/wasm32-wasi/: README.md  package.json  pnpm-lock.yaml
crates/node/npm/wasm32-wasi/package/: package.json
crates/node/npm/win32-arm64-msvc/: README.md  package.json
crates/node/npm/win32-x64-msvc/: README.md  package.json
crates/node/scripts/: install.js  move-artifacts.mjs  run-artifacts.mjs
crates/node/src/: lib.rs  utf16.rs
crates/oxide/: Cargo.toml
crates/oxide/benches/: parse_candidates.rs  scan_files.rs
crates/oxide/benches/fixtures/: template-002.html  template-005.html  template-006.html
crates/oxide/fuzz/: Cargo.toml
crates/oxide/fuzz/fuzz_targets/: parsing.rs
crates/oxide/src/: cache.rs  cursor.rs  extractor.rs  fast_skip.rs  glob.rs  lib.rs  main.rs  parser.rs  paths.rs  throughput.rs  wasm.rs
crates/oxide/src/extractor/: arbitrary_property_machine.rs  arbitrary_value_machine.rs  arbitrary_variable_machine.rs  boundary.rs  bracket_stack.rs  candidate_machine.rs  css_variable_machine.rs  machine.rs  mod.rs  modifier_machine.rs  named_utility_machine.rs  named_variant_machine.rs  string_machine.rs  utility_machine.rs  variant_machine.rs
crates/oxide/src/extractor/pre_processors/: clojure.rs  elixir.rs  haml.rs  json.rs  markdown.rs  mod.rs  pre_processor.rs  pug.rs  razor.rs  ruby.rs  rust.rs  slim.rs  svelte.rs  template_toolkit.rs  twig.rs  vue.rs
crates/oxide/src/extractor/pre_processors/test-fixtures/haml/: dst-1.haml  dst-17051.haml  dst-17813.haml  src-1.haml  src-17051.haml  src-17813.haml
crates/oxide/src/scanner/: allowed_paths.rs  auto_content.rs  auto_source_detection.rs  detect_sources.rs  init_tracing.rs  mod.rs  sources.rs
crates/oxide/src/scanner/fixtures/: binary-extensions.txt  ignored-content-dirs.txt  ignored-extensions.txt  ignored-files.txt  template-extensions.txt
crates/oxide/tests/: auto_content.rs  scan_dir.rs  scanner.rs
crates/plugin-example/: Cargo.toml
crates/plugin-example/node/: package-lock.json  package.json
crates/plugin-example/node/src/: client.ts  plugin-api.ts  plugin.ts  server.ts
crates/plugin-example/src/: app.rs  main.rs  pipes.rs
oxide/crates/core/: Cargo.toml
oxide/crates/core/benches/: parse_candidate_strings.rs  parse_candidate_strings_from_files.rs  parse_candidates.rs  scan_files.rs
oxide/crates/core/benches/fixtures/: template-000.html  template-001.html  template-002.html  template-003.html  template-004.html  template-006.html  template-007.html  template-008.html  template-009.html  template-010.html  template-011.html  template-012.html  template-013.html  template-014.html  template-015.html  template-016.html  template-017.html  template-018.html  template-019.html  template-020.html  template-021.html  template-022.html  template-023.html  template-024.html  template-025.html  template-026.html  template-027.html  template-028.html  template-029.html  template-030.html  template-031.html  template-032.html  template-033.html  template-034.html  template-035.html  template-036.html  template-037.html  template-038.html  template-039.html  template-040.html  (+959 more)
oxide/crates/core/fuzz/fuzz_targets/: parsing.rs
oxide/crates/core/src/: cache.rs  candidate.rs  cursor.rs  fast_skip.rs  glob.rs  lib.rs  location.rs  modifier.rs  parser.rs  utility.rs  variant.rs
oxide/crates/core/src/fixtures/: binary-extensions.txt  ignored-extensions.txt  ignored-files.txt  template-extensions.txt  wanted-extensions.txt
oxide/crates/core/tests/: auto_content.rs
(+3371 files in other folders)
