[package]
name = "tailwindcss-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = true
codegen-units = 1

[dependencies]
serde_json = "1.0.127"
log = "0.4.22"
wasm-bindgen = "0.2.93"
bstr = "1.10.0"
memmem = "0.1.1"
memchr = "2.7.4"
tinyvec = { version = "1.8.0", features = ["alloc"] }

[dev-dependencies]
rstest = "0.22.0"
rstest_reuse = "0.7.0"
