[package]
edition = "2021"
name = "tailwind-oxide"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.3.0", default-features = false, features = ["napi4"] }
napi-derive = "3.2.5"
tailwindcss-oxide = { path = "../oxide" }
rayon = "1.10.0"

[build-dependencies]
napi-build = "2.2.3"
