[package]
name = "tailwindcss-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "1.0.1"
globwalk = "0.8.1"
log = "0.4"
rayon = "1.5.3"
fxhash = "0.2.1"
crossbeam = "0.8.2"
tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.3", features = ['html_reports'] }

[[bench]]
name = "parse_candidates"
harness = false

[[bench]]
name = "parse_candidate_strings_from_files"
harness = false
